[metadata]
name = rpkimancer
description = A tool for performing RPKI incantations
long_description = file: README.md, LICENSE
keywords = rpki
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    argcomplete>=1.12.2, <2.0
    cryptography>=3.3.2, <4.0
    pycrate @ git+https://github.com/P1sec/pycrate.git@c6d5b361f217c483b8d7b05f944681ab1859e14b#egg=pycrate

[options.entry_points]
console_scripts =
    rpki-conjure = rpkimancer.demo:main
