[metadata]
name = rpkimancer
description = A tool for performing RPKI incantations
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = Ben Maddison
author_email = benm@workonline.africa
url = https://github.com/benmaddison/rpkimancer
keywords = rpki
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    argcomplete>=1.12.2, <2.0
    cryptography>=3.3.2, <4.0
    pycrate>=0.5.2, <0.6

[options.entry_points]
console_scripts =
    rpkincant = rpkimancer.cli.__main__:main
