[metadata]
name = rpkimancer
description = A tool for performing RPKI incantations
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = Ben Maddison
author_email = benm@workonline.africa
url = https://github.com/benmaddison/rpkimancer
project_urls =
    Documentation=https://benmaddison.github.io/rpkimancer
    Bug Tracker=https://github.com/benmaddison/rpkimancer/issues
keywords = rpki
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Telecommunications Industry
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet
    Topic :: Security :: Cryptography
    Topic :: Software Development :: Testing
    Typing :: Typed

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    argcomplete>=1.12.2, <3.0
    cryptography>=3.4.4, <39.0
    pycrate>=0.5.2, <0.6

[options.entry_points]
console_scripts =
    rpkincant = rpkimancer.cli.__main__:main

[options.package_data]
* =
    *.asn
